fixed horizontal scrolling issue when elements are hidden on mobile devices

--- a/style.css
+++ b/style.css
@@ -739,6 +739,10 @@ textarea {
 	color: #22aadd;
 }
 
+.site-branding .custom-logo-link {
+	display: block;
+}
+
 .site-branding .custom-logo {
 	margin: 0.3em 1em 0 0;
 	padding: 0;
